Revision history for Perl extension Log::Dispatch::Config.

0.06
	* Added Log::Dispatch::Configurator and docs/tests for it
	  (Thanks to Matt Sergeant <matt@sergeant.org>)
	- Removed pseudo-hash dependency
	  (Thanks to Dave Rolsky <autarch@urth.org>)
	* Added Date/Time format configuration
	  (Thanks to Matt Sergeant <matt@sergeant.org>)
	- Deprecated ${XXX} style format

0.05  Thu Dec  6 19:05:11 JST 2001
	- CVS glitches in Makefile.PL (replacement of the RCS keyword ..)

0.04  Thu Dec  6 18:33:50 JST 2001
	* --- API change (with backward compatibility) ---
	  Whole architecture redesign: now inherits from Log::Dispatch.

0.03  Tue Dec  4 11:33:15 JST 2001
	- fixed 03_reload.t not to segfault
	  (Thanks to Matt Sergeant <matt@sergeant.org>)

0.02  Sun Nov 18 23:56:31 JST 2001
	- fixed varlist() regex

0.01  Sat Nov 17 18:15:34 2001
	- original version; created by h2xs 1.19
