@@ -1,6 +1,7 @@
 Revision history for Perl extension Log::Dispatch::Config.
 
 0.06
+	--- developer API change ---
 	* Added Log::Dispatch::Configurator and docs/tests for it
 	  (Thanks to Matt Sergeant <matt@sergeant.org>)
 	- Removed pseudo-hash dependency
@@ -8,13 +9,14 @@ Revision history for Perl extension Log::Dispatch::Config.
 	* Added Date/Time format configuration
 	  (Thanks to Matt Sergeant <matt@sergeant.org>)
 	- Deprecated ${XXX} style format
+	- Switched to fully qualified variable from use vars (for inheritance)
 
 0.05  Thu Dec  6 19:05:11 JST 2001
 	- CVS glitches in Makefile.PL (replacement of the RCS keyword ..)
 
 0.04  Thu Dec  6 18:33:50 JST 2001
-	* --- API change (with backward compatibility) ---
-	  Whole architecture redesign: now inherits from Log::Dispatch.
+	--- API change (with backward compatibility) ---
+	* Whole architecture redesign: now inherits from Log::Dispatch.
 
 0.03  Tue Dec  4 11:33:15 JST 2001
 	- fixed 03_reload.t not to segfault
